macOS: skip use of SDL2
instead rely on core foundation and application services directly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,13 +22,30 @@ endif()
 
 include_directories(.)
 
-find_package(SDL2 REQUIRED)
+if (APPLE)
+	# macOS specific settings
+	find_library(COREFOUNDATION_LIBRARY CoreFoundation)
+	find_library(APPLICATIONSERVICES_LIBRARY ApplicationServices)
 
-message("SDL2_INCLUDE_DIRS: ${SDL2_INCLUDE_DIRS}")
-message("SDL2_LIBRARIES: ${SDL2_LIBRARIES}")
+	if (NOT COREFOUNDATION_LIBRARY)
+		message(FATAL_ERROR "CoreFoundation library not found")
+	endif()
 
-# fix issue in cmake 3.16.4 in Ubuntu 16.04
-string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
+	if (NOT APPLICATIONSERVICES_LIBRARY)
+		message(FATAL_ERROR "ApplicationServices library not found")
+	endif()
+
+	message("CoreFoundation_LIBRARY: ${COREFOUNDATION_LIBRARY}")
+	message("ApplicationServices_LIBRARY: ${APPLICATIONSERVICES_LIBRARY}")
+else ()
+	find_package(SDL2 REQUIRED)
+
+	message("SDL2_INCLUDE_DIRS: ${SDL2_INCLUDE_DIRS}")
+	message("SDL2_LIBRARIES: ${SDL2_LIBRARIES}")
+
+	# fix issue in cmake 3.16.4 in Ubuntu 16.04
+	string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
+endif()
 
 add_library(agsappopenurl SHARED
         agsappopenurl.cpp
@@ -37,8 +54,16 @@ add_library(agsappopenurl SHARED
 
 target_include_directories(agsappopenurl PRIVATE ../ags/Engine/)
 target_include_directories(agsappopenurl PRIVATE ../ags/Common/)
-target_include_directories(agsappopenurl PRIVATE ${SDL2_INCLUDE_DIRS})
-target_link_libraries(agsappopenurl PRIVATE ${SDL2_LIBRARIES})
+
+if (APPLE)
+	target_link_libraries(agsappopenurl PRIVATE
+			${COREFOUNDATION_LIBRARY}
+			${APPLICATIONSERVICES_LIBRARY}
+			)
+else ()
+	target_include_directories(agsappopenurl PRIVATE ${SDL2_INCLUDE_DIRS})
+	target_link_libraries(agsappopenurl PRIVATE ${SDL2_LIBRARIES})
+endif ()
 
 
 install(TARGETS agsappopenurl RUNTIME DESTINATION lib)
